--- a/ingress/app1/service.yaml
+++ b/ingress/app1/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: myapp1-service
   labels:
     env: dev
 spec:
   type: ClusterIP
   selector:
-    app: myapp
+     app: mytest
   ports:
   - port: 80
     targetPort: 8080
