--- a/ingress/app2/web-deploy.yaml
+++ b/ingress/app2/web-deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: usermgmt-webapp
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: usermgmt-webapp
@@ -20,7 +20,7 @@ spec:
           command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z mysql 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL DB Server has started";']      
       containers:
         - name: usermgmt-webapp
-          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
+          image: webappapi.azurecr.io/usermgmt-webapp:v1
           imagePullPolicy: Always
           ports: 
             - containerPort: 8080           
